fix: navigation menu style on small screens

--- a/src/app/layouts/app/app.component.scss
+++ b/src/app/layouts/app/app.component.scss
@@ -63,6 +63,7 @@ ion-segment {
     left: 50%;
     margin-left: -230px;
     background: white;
+    box-shadow: 0 0 7px #9d9d9d;
 
     ion-segment-button {
       color: var(--ion-color-contrast);
